feat: Additional columns in fund wallet tables

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -415,6 +415,7 @@
                                     <thead>
                                         <tr>
                                             <th class="text-center">DATE</th>
+                                            <th class="text-center">DESCRIPTION</th>
                                             <th class="text-center">ADD FUNDS</th>
                                             <th class="text-center">EXPENSES</th>
                                             <th class="text-center">RUNNING BALANCE</th>
@@ -455,6 +456,8 @@
                                             <th class="text-center">CATEGORY</th>
                                             <th class="text-center">DESCRIPTION</th>
                                             <th class="text-center">ACCOUNT NO. / PARTICULAR</th>
+                                            <th class="text-center">UNIT PRICE</th>
+                                            <th class="text-center">QTY</th>
                                             <th class="text-center">BILLING MONTH</th>
                                             <th class="text-center">SETTLED BY</th>
                                             <th class="text-center">TOTAL AMOUNT DUE</th>
