--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -130,7 +130,7 @@
                                 <div class="col-md-4">
                                     <div class="position-relative form-group"><label for="total_amount_due"
                                             class="">Unit Price</label>
-                                            <input required id="unit_price" placeholder="Price" step="1" type="number" name="unit_price" class="form-control">
+                                            <input required id="unit_price" placeholder="Price" step="any" type="number" name="unit_price" class="form-control">
                                             <div class="valid-feedback">
                                                 Looks good!
                                             </div>
