feat: Add e reg. password of student

--- a/prime_admin/templates/lms/client_view_modal.html
+++ b/prime_admin/templates/lms/client_view_modal.html
@@ -89,7 +89,12 @@
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_e_registration" name="view_e_registration"
                                     value="">
                             </div>
-                            <div class="col-md-9 mb-3">
+                            <div class="col-md-3 mb-3">
+                                <label for="view_passport">E-Reg. Password</label>
+                                <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_password" name="view_password"
+                                    value="">
+                            </div>
+                            <div class="col-md-6 mb-3">
                                 <label for="view_address">Address</label>
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_address" name="view_address"
                                     value="">
