fix: not yet claim to no request yet

--- a/prime_admin/templates/lms/earnings_admin.html
+++ b/prime_admin/templates/lms/earnings_admin.html
@@ -209,7 +209,7 @@
                                 success: function(response){
                                     if(response.result){
                                         table.ajax.reload();
-                                        toastr.success("Wait for admin to approve","Claim successfully requested!");
+                                        toastr.success("Wait for admin to approve","Successfully requested!");
                                     }else{
                                         toastr.error("Requesting claim Failed", "Error Occured!");
                                     }
