--- a/prime_admin/templates/lms/earnings.html
+++ b/prime_admin/templates/lms/earnings.html
@@ -440,7 +440,7 @@
                                 <div class="widget-subheading">Current Earnings</div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-success"><span id="total_earnings">₱ 0.00</span></div>
+                                <div class="widget-numbers text-info"><span id="total_earnings">₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
@@ -454,7 +454,7 @@
                                 <div class="widget-subheading">Current Savings</div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-warning"><span id="total_savings">₱ 0.00</span></div>
+                                <div class="widget-numbers text-info"><span id="total_savings">₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
@@ -470,7 +470,7 @@
                                 <div class="widget-subheading">Past Earnings</div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-info"><span id="total_earnings_claimed">₱ 0.00</span></div>
+                                <div class="widget-numbers text-success"><span id="total_earnings_claimed">₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
@@ -484,7 +484,7 @@
                                 <div class="widget-subheading">Past Savings</div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-info"><span id="total_savings_claimed">₱ 0.00</span></div>
+                                <div class="widget-numbers text-success"><span id="total_savings_claimed">₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
