--- a/prime_admin/templates/lms/earnings_admin.html
+++ b/prime_admin/templates/lms/earnings_admin.html
@@ -13,6 +13,54 @@
 
 {% block scripts %}
 <script>
+    function init(){
+        getApprovalEarnings();
+    }
+
+    function getApprovalEarnings(){
+        var branchID = $("#btn_branch_label").val();
+        console.log(branchID);
+
+        $.getJSON(`branches/${branchID}/earnings/total`, function(response){
+            var totalEarnings = parseFloat(response.totalEarnings).toFixed(2);
+    
+            $("#total_earnings").html("₱" + totalEarnings);
+            $("#total_earnings_claimed").html("₱" + response.totalEarningsClaimed);
+            $("#total_nyc").html("₱" + response.totalNYC);
+
+            $("#list_branches_total_earnings").children().remove();
+
+            if (response.branchesTotalEarnings.length > 0){
+                var newBranchesTotalEarningsList = '';
+                
+                for (i=0; i < response.branchesTotalEarnings.length; i++){
+                    var totalEarnings = parseFloat(response.branchesTotalEarnings[i]['totalEarnings']).toFixed(2);
+
+                    newBranchesTotalEarningsList = newBranchesTotalEarningsList + `<li class="list-group-item">
+                    <div class="widget-content p-0">
+                        <div class="widget-content-outer">
+                            <div class="widget-content-wrapper">
+                                <div class="widget-content-left">
+                                    <div class="widget-heading">${response.branchesTotalEarnings[i]['name']}</div>
+                                    <div class="widget-subheading">Current Earnings</div>
+                                </div>
+                                <div class="widget-content-right">
+                                    <div class="widget-numbers text-primary">₱ ${totalEarnings}</div>
+                                    <button value="${response.branchesTotalEarnings[i]['id']}" type="button" data-toggle="modal" data-target="#mdl_approve" data-placement="bottom" class="btn-wide mb-2 mr-2 btn btn-warning btn-approve">
+                                        Approve
+                                        </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>`
+                }
+
+                $("#list_branches_total_earnings").html(newBranchesTotalEarningsList);
+            }
+        });
+    }
+
     $(document).ready(function(){
         $.ajaxSetup({
             beforeSend: function(xhr, settings) {
@@ -39,7 +87,8 @@
             "showMethod": "fadeIn",
             "hideMethod": "fadeOut"
             }
-    
+
+        init();
     
         var table = $('#tbl_members').DataTable({
             "dom": 'rtip',
@@ -77,52 +126,52 @@
                     d.status = $("#status").val();
                 },
                 "dataSrc": function(json){
-                    var totalEarnings = parseFloat(json.totalEarnings).toFixed(2);
-    
-                    $("#total_earnings").html("₱" + totalEarnings);
-                    $("#total_savings").html("₱" + json.totalSavings);
-                    $("#total_earnings_claimed").html("₱" + json.totalEarningsClaimed);
-                    $("#total_savings_claimed").html("₱" + json.totalSavingsClaimed);
-    
-                    $("#list_branches_total_earnings").children().remove();
-    
-                    if (json.branchesTotalEarnings.length > 0){
-                        var newBranchesTotalEarningsList = '';
-                        
-                        for (i=0; i < json.branchesTotalEarnings.length; i++){
-                            var totalEarnings = parseFloat(json.branchesTotalEarnings[i]['totalEarnings']).toFixed(2);
-    
-                            newBranchesTotalEarningsList = newBranchesTotalEarningsList + `<li class="list-group-item">
-                            <div class="widget-content p-0">
-                                <div class="widget-content-outer">
-                                    <div class="widget-content-wrapper">
-                                        <div class="widget-content-left">
-                                            <div class="widget-heading">${json.branchesTotalEarnings[i]['name']}</div>
-                                            <div class="widget-subheading">Current Earnings</div>
-                                        </div>
-                                        <div class="widget-content-right">
-                                            <div class="widget-numbers text-primary">₱ ${totalEarnings}</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>`
-                        }
-    
-                        $("#list_branches_total_earnings").html(newBranchesTotalEarningsList);
-    
-                        console.log(json.branchesTotalEarnings);
-        
-                    }
-             
                     return json.data;
                 }
             }
         });
+
+        var dt_approve_earnings = $('#tbl_mdl_approve_earnings').DataTable({
+            "dom": 'rtip',
+            "pageLength": 20,
+            "processing": true,
+            "autoWidth": false,
+            "columnDefs": [
+                {visible: false, targets:[0,1,2]}
+            ],
+            ordering: false,
+            "order": [[ 2, 'asc' ]],
+            "drawCallback": function ( settings ) {
+                var api = this.api();
+                var rows = api.rows( {page:'current'} ).nodes();
+                var last=null;
+                var total_earnings = 0.00;
+                var lastID = '';
+
+                api.column(2, {page:'current'} ).data().each( function ( group, i ) {
+                    var row_data = api.rows({page:'current'} ).row(i).data();
+                    var groupID = row_data[0];
+
+                    total_earnings += parseFloat(row_data[5]);
+
+                    if ( last !== group ) {
+                        console.log(lastID);
+                        lastID = row_data[0];
+
+                        $(rows).eq( i ).before(
+                            `<tr style="background-color: lightcyan !important"><td id="td_${groupID}" colspan="8"><strong>${group} Earnings: </strong></td></tr>`
+                        );
+                        
+                        last = group;
+                        total_earnings = 0.00;
+                    }
+                } );
+            },
+        });
     
         var dtbl_transaction_history = $('#tbl_transaction_history').DataTable({
             "dom": 'rtip',
-            "pageLength": 25,
+            "pageLength": 10,
             "processing": true,
             "order": [[1, 'asc']],
             "ordering": false,
@@ -151,8 +200,66 @@
             getProfitSharingEarnings();
         });
     
+
+        $("#div_branch_buttons").on('click', '.btn-branch', function () {
+            var branch_name = $(this).html();
+            $("#btn_branch_label").html(branch_name.toUpperCase());
+            $("#btn_branch_label").val($(this).val());
+            $("#branch_card_header_label").html(branch_name);
+            $('#btn_branch_label').trigger('change');
+        });
+
+        $("#btn_branch_label").change(function(){
+            getApprovalEarnings();
+        });
+
+        var selectedBranch = "";
+        
+        $("#list_branches_total_earnings").on('click', 'button.btn-approve',function(){
+            var branch_id = $(this).val();
+            selectedBranch = branch_id;
+
+            dt_approve_earnings.ajax.url(`/learning-management/branches/${branch_id}/earnings`).load();
+        });
+
+        $("#btn_approve_earning").click(function(){
+            swal({
+                title: 'Approved Branch Earnings?',
+                text: "All marketers claim requests in this branch will be approved!",
+                type: 'warning',
+                showCancelButton: true,
+                cancelButtonColor: "#DD6B55",
+                confirmButtonColor: "#DD6B55",
+                confirmButtonText: "Confirm!",
+                closeOnConfirm: false,
+                showLoaderOnConfirm: true
+              }, function (){
+                const url = `/learning-management/earnings/branches/${selectedBranch}/approve-earning`;
+
+                setTimeout(function () {
+                    $.ajax({ 
+                        url: url,
+                        type: "POST",
+                        dataType: "json",
+                        async: false,
+                        contentType: "application/json; charset=utf-8",
+                        success: function (data) {
+                            swal(
+                                'Success!',
+                                'All branch earnings approved!',
+                                'success'
+                                );
+                            location.reload();
+                        },
+                        error: function (data) {
+                            swal("Error Occured!", "Please refresh the page then try again!", "error");
+                        },
+                    });
+                }, 500);
+              });
+        });
+
         $("#branch").change(function(){
-            
             $.ajax({
                 url: `/learning-management/api/branches/${$(this).val()}/batches`,
                     type: "GET",
@@ -400,28 +507,25 @@
             <div class="tab-content">
                 <div class="tab-pane show active" id="tab-animated1-0" role="tabpanel">
                     <div class="card-header">
-                        <div id="card_header_label">
-                            BRANCH'S NAME
+                        <div id="branch_card_header_label">
+                            ALL BRANCHES
                         </div>
             
                         <div class="btn-actions-pane-right">
                             <div class="nav">  
-                                <button value="all" type="button" class="btn-wide mb-2 mr-2 btn btn-warning">
-                                Approve
-                                </button>
                                 <div class="dropleft btn-group">
-                                    <button value="all" type="button" aria-haspopup="true" aria-expanded="false"
+                                    <button disabled id="btn_branch_label" value="all" type="button" aria-haspopup="true" aria-expanded="false"
                                         data-toggle="dropdown" class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
                                         ALL BRANCHES
                                     </button>
-                                    <div tabindex="-1" role="menu" aria-hidden="true"
+                                    <div id="div_branch_buttons" tabindex="-1" role="menu" aria-hidden="true"
                                         class="dropdown-menu" x-placement="left-start"
                                         style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(-4px, 0px, 0px);">
                                         <button value="all" type="button" tabindex="0"
-                                        class="dropdown-item btn-marketer">All Branches</button>
+                                        class="dropdown-item btn-branch">ALL BRANCHES</button>
                                         {% for branch in TABLE_OPTIONS['branches'] %}
                                         <button value="{{branch.id}}" type="button" tabindex="0"
-                                            class="dropdown-item btn-marketer">{{branch.name}}</button>
+                                            class="dropdown-item btn-branch">{{branch.name}}</button>
                                         {% endfor %}
                                     </div>
                                 </div>
@@ -431,6 +535,8 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-4 col-xl-4">
+                            </div>
+                            <div class="col-lg-4 col-xl-4">
                                 <div class="card mb-3 widget-content">
                                     <div class="widget-content-wrapper">
                                         <div class="widget-content-left">
@@ -438,11 +544,17 @@
                                             <div class="widget-subheading"></div>
                                         </div>
                                         <div class="widget-content-right">
-                                            <div class="widget-numbers text-success"><span>₱ 0.00</span></div>
+                                            <div class="widget-numbers text-success"><span id="total_earnings">₱ 0.00</span></div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-lg-4 col-xl-4">
+                            
+                            </div>
+                        </div>
+
+                        <div class="row">
                             <div class="col-lg-4 col-xl-4">
                                 <div class="card mb-3 widget-content">
                                     <div class="widget-content-wrapper">
@@ -451,10 +563,12 @@
                                             <div class="widget-subheading"></div>
                                         </div>
                                         <div class="widget-content-right">
-                                            <div class="widget-numbers text-success"><span>₱ 0.00</span></div>
+                                            <div class="widget-numbers text-warning"><span id="total_nyc">₱ 0.00</span></div>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="col-lg-4 col-xl-4">
                             </div>
                             <div class="col-lg-4 col-xl-4">
                                 <div class="card mb-3 widget-content">
@@ -464,14 +578,14 @@
                                             <div class="widget-subheading"></div>
                                         </div>
                                         <div class="widget-content-right">
-                                            <div class="widget-numbers text-info"><span>₱ 0.00</span></div>
+                                            <div class="widget-numbers text-warning" id="total_earnings_claimed"><span>₱ 0.00</span></div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                          
                         </div>
-                        <ul class="list-group">
+                        <ul id="list_branches_total_earnings" class="list-group">
                             {% for branch in TABLE_OPTIONS['branches'] %}
                             <li class="list-group-item">
                                 <div class="widget-content p-0">
@@ -692,6 +806,7 @@
 {% endblock %}
 
 {% block modals %}
+{% include "lms/approve_modal.html" %}
 
 {% if TABLE_OPTIONS['create_modal'] and TABLE_OPTIONS['create_url'] %}
 {% include TABLE_OPTIONS['create_modal_template'] %}
