fix: Change system name

--- a/app/auth/templates/auth/user_register.html
+++ b/app/auth/templates/auth/user_register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Register - Prime Language and Tech. Center</title>
+    <title>Register - Prime Korean Language and Review Center Inc.</title>
     <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
     <meta name="description" content="ArchitectUI HTML Bootstrap 4 Dashboard Template">
@@ -2457,7 +2457,7 @@
                                         <div class="slide-img-bg">
                                         </div>
                                         <div class="slider-content">
-                                            <h3>Prime Language and Tech. Center</h3>
+                                            <h3>Prime Korean Language and Review Center Inc.</h3>
                                             <p>Management System
                                             </p>
                                         </div>
