--- a/prime_admin/templates/lms/student_pdf.html
+++ b/prime_admin/templates/lms/student_pdf.html
@@ -48,7 +48,7 @@
 <body>
 
   <div style="text-align: center;">
-    <h3 style="margin-bottom: 5px;">PRIME LANGUAGE AND TECH. CENTER INC.</h3>
+    <h3 style="margin-bottom: 5px;">Prime Korean Language and Review Center Inc.</h3>
     <h6 style="font-weight:lighter;margin-top: 5px;">SEC. REG. NO.: CS201817522</h6>
     <h5 style="font-weight:bold;margin-top: 10px;">IMPORTANT STUDENTS RECORD</h5>
   </div>
