--- a/prime_home/templates/prime_home/footer.html
+++ b/prime_home/templates/prime_home/footer.html
@@ -75,7 +75,7 @@
         </div>
         <div class="pb-3 pt-3 text-center">
             <hr class="border-secondary mt-0">
-            <p class="mb-0">Copyright &copy; Prime Language and Tech. Center Inc.</p>
+            <p class="mb-0">Copyright &copy; Prime Korean Language and Review Center Inc.</p>
         </div>
     </div>
 </footer>
