feat: Payment records in earnings

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -24,7 +24,7 @@
                                                 <option value="">Choose...</option>
                                             {% endif %}
                                             
-                                            {% for branch in TABLE_OPTIONS['branches'] %}
+                                            {% for branch in branches %}
                                                 <option value="{{branch.id}}">{{branch.name}}</option>
                                             {% endfor %}
                                         </select>
