--- a/prime_admin/templates/lms/add_funds_modal.html
+++ b/prime_admin/templates/lms/add_funds_modal.html
@@ -34,7 +34,7 @@
                                         <label for="branch" class="">Branch</label>
                                         <select name="branch" id="branch" class="form-control">
                                             <option value="">Choose...</option>
-                                            {% for branch in TABLE_OPTIONS['branches'] %}
+                                            {% for branch in branches %}
                                                 <option value="{{branch.id}}">{{branch.name}}</option>
                                             {% endfor %}
                                         </select>
