--- a/prime_admin/templates/lms/earnings_admin.html
+++ b/prime_admin/templates/lms/earnings_admin.html
@@ -142,7 +142,7 @@
 
         init();
     
-        var table = $('#tbl_members').DataTable({
+        var dt_members = $('#tbl_members').DataTable({
             "dom": 'rtip',
             "pageLength": 20,
             "processing": true,
@@ -180,6 +180,21 @@
                 "dataSrc": function(json){
                     return json.data;
                 }
+            }
+        });
+
+        var dt_payments = $('#tbl_payments').DataTable({
+            "dom": 'rtip',
+            "pageLength": 20,
+            "processing": true,
+            "serverSide": true,
+            "autoWidth": false,
+            "columnDefs": [
+                {visible: false, targets:[0]}
+            ],
+            ordering: false,
+            "ajax": {
+                "url": "/learning-management/marketers/''/payment-records/dt",
             }
         });
 
@@ -327,19 +342,19 @@
                         }
                     }
                 });
-            table.ajax.reload();
+            dt_members.ajax.reload();
         });
     
         $("#batch_no").change(function(){
-            table.ajax.reload();
+            dt_members.ajax.reload();
         });
         
         $("#status").change(function(){
-            table.ajax.reload();
+            dt_members.ajax.reload();
         });
     
         $("#tbl_members tbody").on('click', '.btn-claim', function(){
-            var data = table.row( $(this).parents('tr')).data();
+            var data = dt_members.row( $(this).parents('tr')).data();
             
             $.confirm({
                 title: 'Request for claim',
@@ -361,7 +376,7 @@
                                 contentType: "application/json; charset=utf-8",
                                 success: function(response){
                                     if(response.result){
-                                        table.ajax.reload();
+                                        dt_members.ajax.reload();
                                         toastr.success("Wait for admin to approve","Successfully requested!");
                                     }else{
                                         toastr.error("Requesting claim Failed", "Error Occured!");
@@ -378,7 +393,7 @@
         });
     
         $("#tbl_members tbody").on('click', '.btn-approve-claim', function(){
-            var data = table.row( $(this).parents('tr')).data();
+            var data = dt_members.row( $(this).parents('tr')).data();
             var marketer = $("#card_header_label").text();
             var marketer_id = $("#select_marketer").val();
     
@@ -403,7 +418,7 @@
                                 contentType: "application/json; charset=utf-8",
                                 success: function(response){
                                     if(response.result){
-                                        table.ajax.reload();
+                                        dt_members.ajax.reload();
                                         dtbl_transaction_history.reload();
                                         toastr.success("Marketers request claim","Claim request successfully approved!");
                                     }else{
@@ -422,7 +437,10 @@
 
 
         $("#btn_confirm").click(function(){
-            table.ajax.reload();
+            const marketerId = $("#select_marketer").val();
+
+            dt_members.ajax.reload();
+            dt_payments.ajax.url(`/learning-management/marketers/${marketerId}/payment-records/dt`).load();
             getProfitSharingEarnings();
             getMarketerTotalEarnings();
 
@@ -662,18 +680,25 @@
                     </div>
                 </div>
                 <div class="tab-pane show" id="tab-animated1-2" role="tabpanel">
-                    <!-- <div style="margin-top: 10px;" class="table-responsive">
-                        <table id="tbl_transaction_history" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                    <div class="table-responsive">
+                        <table id="tbl_payments" class="align-middle mb-0 table table-bordered table-striped table-hover">
                             <thead>
                                 <tr>
+                                    <th class="text-center">ID</th>
                                     <th class="text-center">DATE</th>
-                                    <th class="text-center">DESCRIPTION</th>
+                                    <th class="text-center">ACCOUNT NO. / PARTICULAR</th>
+                                    <th class="text-center">REFERENCE NO.</th>
+                                    <th class="text-center">OTC</th>
+                                    <th class="text-center">AMOUNT</th>
+                                    <th class="text-center">STATUS</th>
+                                    <th class="text-center">ACTIONS</th>
                                 </tr>
                             </thead>
                             <tbody>
+                                <!-- load with json -->
                             </tbody>
                         </table>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
